[package]
name = "rgrep"
version = "0.1.0"
authors = ["alexpasmantier "]
edition = "2024"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
